# CureOS

./: .gitignore  Cargo.toml  README.md  bin.txt  bochs.cfg  bochsout.txt  linker.ld  makefile  none  snapshot.txt  snapshot1.txt  snapshot2.txt  snapshot3.txt  snapshot4.txt  snapshot5.txt  snapshot6.txt
.cargo/: config.toml
0.Learning Assembly Basics/1. Introduction/: read.md
0.Learning Assembly Basics/2. Computer Architecture/: read.md
0.Learning Assembly Basics/3. Writing the First Program/: exit.S  maximum.S  read.md
0.Learning Assembly Basics/4. Function/: f2c.S  factorial  factorial.S  maximum_address  maximum_address.S  maximum_function  maximum_function.S  maximum_length  maximum_length.S  power  power.S  scanf_printf.S  square  square.S
0.Learning Assembly Basics/5. File processing/: toupper  toupper.S  toupper.txt
1.workspace/: read.md
2.asm-and-multiboot&hello-kernel-world/: linker.ld
3. Install GDT/: dump  makefile
3. Install GDT/kernel/: kernel.c
3.interrupts/: makefile
3.interrupts/kernel/: kernel.c
4.interrupts/: bochs.cfg  dump
6. virtual memory/: makefile
6. virtual memory/config/: make-os
6. virtual memory/hal/: cpu.c
6. virtual memory/kernel/: kernel.c
arch/x86/: hhk.c
config/: make-cc  make-os
docs/: Build.md
hal/: cpu.c  io.c  rtc.c
hal/acpi/: acpi.c  smp.c
hal/apic/: apic.c  apic_timer.c  ioapic.c  irq_setup.c  lapic.c
includes/drivers/: keyboard.h
includes/hal/: cpu.h  io.h  rtc.h
includes/libc/: stdbool.h  stdio.h  stdlib.h  (+1 more)
kernel/: kernel.c
src/: lib.rs
template/: GRUB_TEMPLATE  dump  makefile
(+88 files in other folders)
